@@ -5,6 +5,8 @@
 	* cvl/cvl/cvl_color.h, cvl/cvl_color.c: New function
 	cvl_convert_format_forced().
 	* configure.ac: Bump library version number.
+	* NEWS, cvl/cvl_io.c: Fix PAM support. Add support for PAM files with
+	two channels.
 
 2008-04-19  Martin Lambers <marlam@marlam.de>
 
